--- a/seletorescss/index.html
+++ b/seletorescss/index.html
@@ -40,6 +40,9 @@
         <p>test 2 paragrafo</p>
     </div>
 
+    <a href="https://globo.com">Globo</a>
+    <a href="https://uol.com.br">UOL</a>
+
 
 </body>
 </html>
