Last selectors changes

--- a/seletorescss/index.html
+++ b/seletorescss/index.html
@@ -12,7 +12,7 @@
 
     <p id="vermelho" class="bgcinza">Aula sobre Seletores CSS.</p>
 
-    <a href="https://novo.uncisal.edu.br" target="_blank" >Uncisal</a>
+    <a id="uncisal" href="https://novo.uncisal.edu.br" target="_blank" >Uncisal</a>
     <a href="https://www.google.com" target="_blank">Google</a>
     <p class="pontilhado">1) Seletor de Tags</p>
 
@@ -42,6 +42,14 @@
 
     <a href="https://globo.com">Globo</a>
     <a href="https://uol.com.br">UOL</a>
+
+    <ul id="ntest">
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+    </ul>
 
 
 </body>
