--- a/imc/index.html
+++ b/imc/index.html
@@ -41,10 +41,17 @@
             border-radius: 10px;
             margin-top: 20px;
         }
+
+        #lampada {
+            width:150px;
+        }
     </style>
 </head>
 <body>
     <h1>IMC</h1>
+
+    <!-- <img id="lampada" src="images/apagada.png">
+    <button id="interruptor">Acender</button> -->
 
     <form>
         <div class="input-group">
